--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "mongoose": "^6.6.1"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
